# bus-pirate

./: README.mkd  TestI2C.hs  bus-pirate.cabal
System/Hardware/: BusPirate.hs
System/Hardware/BusPirate/: Core.hs  I2C.hs  SPI.hs
