name:                bus-pirate
version:             0.1.0.0
synopsis:            Haskell interface to the Bus Pirate binary interface
homepage:            http://www.github.com/bgamari/bus-pirate
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari.foss@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     System.Hardware.BusPirate
  build-depends:       base >=4.6 && <4.7,
                       serialport >=0.4 && <0.5,
                       bytestring >=0.10 && <0.11,
                       errors >=1.4 && <1.5,
                       transformers >=0.3 && <0.4,
                       either
  default-language:    Haskell2010
